--- a/app/routes/components/button.mdx
+++ b/app/routes/components/button.mdx
@@ -1,4 +1,4 @@
-import ComponentToString from '../utils/componentToString'
+import ComponentToString from '../../utils/componentToString'
 
 # Hello MDX!
 
